refactorizado DTOs